# healthcare-data-processing-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.cursor/rules/: cicd.mdc  fastapi.mdc  opentelemetry.mdc
.github/workflows/: ci.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 2026_03_11_2332_772d3bd63787_create_patients.py  2026_03_11_2341_656dcd0fa7a3_fuzzy_search.py  2026_03_11_2400_create_notes.py  2026_03_11_2401_add_pgvector_note_chunks.py
app/: __init__.py  config.py  deps.py  main.py
app/chat/: __init__.py  client.py  llm.py  router.py  service.py
app/core/: __init__.py  container.py  deps.py
app/notes/: __init__.py  client.py  domain.py  note_chunk_repository.py  repository.py  router.py  service.py
app/patients/: __init__.py  client.py  domain.py  repository.py  router.py  service.py
app/shared/: __init__.py  exceptions.py  observability.py
app/summary/: __init__.py  client.py  llm.py  router.py  service.py
deploy/: README.md
deploy/base/: api.yaml  kustomization.yaml  minio.yaml  namespace.yaml  postgres.yaml
deploy/development/: README.md  api-configmap.yaml  api-secret.yaml  kustomization.yaml  minio-secret.yaml
deploy/k3s/: README.md  api-secret.yaml  api.yaml  kustomization.yaml  minio.yaml  postgres-configmap.yaml  postgres.yaml
deploy/production/: api-configmap.yaml  api-secret.yaml  kustomization.yaml  minio-secret.yaml  postgres-secret.yaml
docs/: monitoring.md  notes-api.md
docs/adr/: 001-modular-monolith-architecture.md
docs/tasks/: 001-healthcare-api-boilerplate.md  002-patient-notes-api.md  003-patient-summary-generation.md  004-containerization-and-deployment.md  README.md  _template.md
observability/: loki-config.yml  otelcol-config.yml  prometheus.yml  tempo.yml
scripts/: initial_db.sh  seed_db.sh  seed_sample_data.py  wait_for_db.py
tests/: conftest.py
(+86 files in other folders)
