[project]
name = "healthcare-data-processing-api"
version = "0.1.0"
description = "Healthcare Data Processing API — modular monolith for patients, notes, and summaries"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.41.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-logging>=0.49b0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "alembic>=1.14.0",
    "ruff>=0.15.5",
    "minio>=7.2.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "pypdf>=5.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "pgvector>=0.3.0",
    "python-multipart>=0.0.9",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.30.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not requires_db'"
markers = [
    "requires_db: marks tests that need a running Postgres (deselect with -m 'not requires_db')",
]

[tool.coverage.run]
source = ["app"]
omit = ["**/__init__.py", "**/tests/**"]
